toolchain/internal/core/analysis/testdata/errors/naming/rpc_not_pascal.vdl
// @expect: E101

rpc lowercase {
	proc GetUser {
		input { id: string }
		output { name: string }
	}
}
